@@ -1,4 +1,4 @@
-attribute	application	test50-disable.p
+attribute	application	test51-enable.p
 attribute	basetime	0
 attribute	clock_id	0
 attribute	nv_size	0
@@ -12,24 +12,22 @@ attribute	total_stmts_duration	0
 attribute	total_stmts_measured	0
 attribute	total_sub_calls	0
 attribute	xs_version	0
-fid_block_time	1	1	[ 0 1 ]
-fid_block_time	1	2	[ 0 1 ]
+fid_block_time	1	3	[ 0 1 ]
 fid_block_time	1	4	[ 0 1 ]
-fid_block_time	1	5	[ 0 1 ]
-fid_fileinfo	1	[ test50-disable.p   1 2 0 0 ]
-fid_fileinfo	1	call	2	DB::disable_profile	[ 1 0 0 0 0 0 0 ]
+fid_fileinfo	1	[ test51-enable.p   1 2 0 0 ]
+fid_fileinfo	1	sub	main::BEGIN	20-20
+fid_fileinfo	1	sub	main::foo	3-3
+fid_fileinfo	1	call	4	main::foo	[ 1 0 0 0 0 0 0 ]
 fid_fileinfo	1	call	6	DB::disable_profile	[ 1 0 0 0 0 0 0 ]
-fid_line_time	1	1	[ 0 1 ]
-fid_line_time	1	2	[ 0 1 ]
+fid_line_time	1	3	[ 0 1 ]
 fid_line_time	1	4	[ 0 1 ]
-fid_line_time	1	5	[ 0 1 ]
-fid_sub_time	1	1	[ 0 1 ]
-fid_sub_time	1	2	[ 0 1 ]
+fid_sub_time	1	3	[ 0 1 ]
 fid_sub_time	1	4	[ 0 1 ]
-fid_sub_time	1	5	[ 0 1 ]
 profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
-sub_subinfo	DB::disable_profile	[ undef 0 0 3 0 0 0 0 ]
-sub_subinfo	DB::disable_profile	called_by	1	2	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	DB::disable_profile	[ undef 0 0 2 0 0 0 0 ]
 sub_subinfo	DB::disable_profile	called_by	1	6	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	main::BEGIN	[ 1 20 20 0 0 0 0 0 ]
+sub_subinfo	main::foo	[ 1 3 3 1 0 0 0 0 ]
+sub_subinfo	main::foo	called_by	1	4	[ 1 0 0 0 0 0 0 ]
