@@ -1,0 +1,23 @@
+# Profile data generated by Devel::NYTProf::Reader
+# More information at http://search.cpan.org/dist/Devel-NYTProf/
+# Format: time,calls,time/call,code
+0,0,0,# test using enable_profile() to write multiple profile files
+0,0,0,
+0,1,0,sub foo { 1 }
+0,1,0,foo();
+0,0,0,
+0,0,0,DB::disable_profile();
+0,0,0,foo();
+0,0,0,
+0,0,0,# switch to new file and (re)enable profiling
+0,0,0,DB::enable_profile("nytprof-test51-b.out");
+0,0,0,foo();
+0,0,0,
+0,0,0,# switch to new file while already enabled
+0,0,0,DB::enable_profile("nytprof-test51-c.out");
+0,0,0,foo();
+0,0,0,
+0,0,0,# This can be removed once we have a better test harness
+0,0,0,-f $_ or die "$_ should exist"
+0,0,0,for ("nytprof-test51-b.out", "nytprof-test51-c.out");
+0,0,0,BEGIN { unlink "nytprof-test51-b.out", "nytprof-test51-c.out" }
